src/test/ui/parser/issue-10636-1.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-10636-1.rs:4:1
   |
LL | struct Obj {
   |            - unclosed delimiter
...
LL | )
   | ^ mismatched closing delimiter

error: aborting due to previous error

